prove se riesco commitare su github

--- a/inventory.yml
+++ b/inventory.yml
@@ -30,6 +30,8 @@ all:
 
     wireguard_host: "wg.{{ root_host }}"
 
+    bunkerweb_ui_host: "bunk-ui.{{ root_host }}"
+
     wireguard_subnet: "10.8.0.x"
 
     wireguard_client_allowed_ips: "0.0.0.0/0, ::/0"
